@@ -1,0 +1,7 @@
+#source: orphan4.s
+#ld: -T orphan4.ld
+#objdump: -h
+
+#...
+  1 \.foo          00000001  00001000  00001000  00000080  2\*\*0
+#pass
