@@ -1,3 +1,11 @@
+2010-01-13  DJ Delorie  <dj@redhat.com>
+
+	* emultempl/elf32.em (_place_orphan): If an input section doesn't
+	match an existing output section, but an unused output section
+	statement does match, use it.
+	* emultempl/pe.em (_place_orphan): Likewise.
+	* emultempl/pep.em (_place_orphan): Likewise.
+
 2010-01-09  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* configure: Regenerate.
